fix: Maint (#82)
* Revert "Add streaming ARINC parser callback (#79)"

This reverts commit 12371d22e2006c2789cbb425545d19f18884df57.

* moving to sha pins and reverting the record parser changes.

* more updates

* less mem

* less mem for all

* less mem used by dafif too

* lots of rework to make things clean and sane